fixed labels on mobile

--- a/sass/theme.scss
+++ b/sass/theme.scss
@@ -116,6 +116,10 @@ a.anchor {
   visibility: hidden;
 }
 
+.input-field label {
+  left: 0;
+}
+
 /* Import Custom Styles */
 @import 'main';
 @import 'cover';
